--- a/style.css
+++ b/style.css
@@ -58,7 +58,21 @@ body {
   width:100%;
 }
 
-#app, #graph {
-  width: 100%;
-  height: 100%;
-}
+#app, #graph, #sidebar {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  }
+  #app {
+    left: 0;
+    width: 100%;
+  }
+  #graph {
+    left: 0;
+    width: 70%;
+  }
+  #sidebar {
+    right: 0;
+    width: 30%;
+    overflow: scroll;
+  }
