highlight nodeLi on node svg hover

--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ body {
     padding: 6px;
     border-bottom: 1px solid #DDD;
   }
-  .nodeItem:hover {
+  .nodeItem:hover,
+  .nodeItem.hover {
     background-color: #FFF0F1;
   }
